# QuintNet

./: GPT2_Trainer.py  README.md  __init__.py  gpt2_train_modal_run.py  merge_checkpoints.py  pyproject.toml  requirements.txt  setup.py  test.py  test_modal_run.py  test_weight_shapes.py  train_modal_run.py  trainer.py
DataParallelsim/: __init__.py  ddp_wrapper.py
PipelineParallelism/: Processgroup.py  __init__.py  operations.py  pipeline_trainer.py  pp_wrapper.py
TensorParallelism/: DOCUMENT.md  README.md  processgroup.py  rewrite.py  utils.py
coordinators/: __init__.py  data_parallel_coordinator.py  dp_pp_coordinator.py  dp_tp_coordinator.py  hybrid_3d_coordinator.py  main_coordinator.py  pipeline_parallel_coordinator.py  tensor_parallel_coordinator.py  tp_pp_coordinator.py
core/: __init__.py  communication.py  config.py  distributed.py  distributed_loading.py  mesh.py  process_groups.py
docs/: TRAINING_GUIDE.md
examples/: __init__.py  config.yaml  dp_config.yaml  full_3d.py  gpt2_config.yaml  gpt2_finetune.py  pp_config.yaml  simple_dp.py  simple_pp.py  simple_tp.py  tp_config.yaml  train_on_single_gpu.py  verify_model.py
optimizers/: __init__.py  distributed_adamw.py  zero.py
parallelism/: __init__.py
src/: __init__.py  process_group_manager.py
strategy/: __init__.py  base_strategy.py  data_parallel_strategy.py  dp_pp_strategy.py  dp_tp_strategy.py  hybrid_3d_strategy.py  pipeline_parallel_strategy.py  tensor_parallel_strategy.py  tp_pp_strategy.py
tests/: __init__.py  conftest.py  test_data_parallel.py  test_hybrid.py  test_imports.py  (+3 more)
(+71 files in other folders)
